# dataone-slack-notifications

./: README.md  pyproject.toml
src/: app.py  requirements.txt
src/.chalice/: config.json  policy-dev.json
