[project]
name = "dataone-slack-notifications-dev"
version = "0.1.0"
description = "Development environment with Chalice to deploy the notification service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.90",
    "chalice>=1.31.3",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "python-dotenv>=1.0.1",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server[all]>=1.12.0",
]
